--- a/src/LandingPage/landingPage.css
+++ b/src/LandingPage/landingPage.css
@@ -1,11 +1,11 @@
 .landing-main {
-    position: relative;
-    background-image: url(../../public/images/landing-bg.png);
-    width: 100%;
-    min-height: 648px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    color: var(--white);
+  position: relative;
+  background-image: url(../../public/images/landing-bg.png);
+  width: 100%;
+  min-height: 648px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  color: var(--white);
 }
 .banner h1 {
   font-size: 42px;
@@ -22,28 +22,123 @@
   letter-spacing: 0.32px;
 }
 
-.find-section {
-  margin-top: -80px;
+.input-group input {
+  background: #0f2139;
+  color: #ffffff;
+  border: 0;
+  border-radius: 0;
+  outline: 0;
+  box-shadow: none;
+  padding: 8.5px 15px;
+  font-size: 15px;
 }
-.find-section .left-box {
-  position: relative;
-  z-index: 2;
+.input-group input:focus {
+  background: #0f2139;
+  color: #ffffff;
+  box-shadow: none;
 }
-.find-section .right-box {
-  margin-top: -140px;
-  position: relative;
-  z-index: 1;
-}
-.find-section .right-box img {
-  width: 100%;
+.input-group input::-ms-input-placeholder {
+  /* Edge 12-18 */
+  color: #b1b1b1;
+  font-weight: 300;
 }
 
-.about-section {
-  padding: 70px 0;
+.input-group input::placeholder {
+  color: #b1b1b1;
+  font-weight: 300;
 }
-.about-section .image-box {
-  width: 150px;
-  height: 100px;
-  transform: skew(20deg);
-  background: red;
+/* search input Css end */
+.dark-grey {
+  color: #565656;
+}
+.grey-text {
+  color: #969595;
+}
+
+.light-pink {
+  color: #ffbccb;
+}
+.dark-red-text {
+  color: #d1143e;
+}
+.par-14 {
+  font-size: 14px;
+  line-height: normal;
+  letter-spacing: 1px;
+  margin: 0px;
+}
+.par-16 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px; /* 156.25% */
+  letter-spacing: 0.32px;
+}
+.par-12 {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px; /* 416.667% */
+  letter-spacing: 0.5px;
+  text-transform: capitalize;
+}
+
+.par-22 {
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 30px; /* 227.273% */
+  text-transform: uppercase;
+}
+.par-18 {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26px; /* 277.778% */
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.par-20 {
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+.par-10 {
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 14px; /* 500% */
+  letter-spacing: 1px;
+  text-transform: capitalize;
+}
+
+.sub-title {
+  color: #d1143e;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 50px; /* 208.333% */
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.title {
+  color: #2f2f2f;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 50px; /* 138.889% */
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.box {
+  width: 50%;
+}
+.wrapper-box {
+  display: flex;
+  align-items: center;
+}
+
+ul,
+li,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  padding-inline-start: 0px;
+  padding-left: 0rem;
 }
