--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
-    @media (min-width: 1400px){
-        .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-            max-width: 1177px;
-        }
-    }
+.common-section-spacing {
+  padding: 70px 0;
+}
+@media (min-width: 1400px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
+    max-width: 1177px;
+  }
+}
